test/corpus/expr_function_call.txt
================================================================================
Function call without args
================================================================================

lambda()

--------------------------------------------------------------------------------

(source_file
  (function_call
    (computed_function_name
      (variable))))

================================================================================
Function call with args
================================================================================

lambda(1)
lambda(1,2,3)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (computed_function_name
      (variable))
      (number))
  (function_call
    (computed_function_name
      (variable))
      (number)
      (number)
      (number)))

================================================================================
Nested function call
================================================================================

op(1, lambda(1,2,3))

--------------------------------------------------------------------------------

(source_file
    (function_call
      (computed_function_name
        (variable))
        (number)
        (function_call
          (computed_function_name
            (variable))
            (number)
            (number)
            (number))))

================================================================================
Qualified function call without args
================================================================================

Example.function()

--------------------------------------------------------------------------------

(source_file
    (function_call
      (qualified_function_name
        (alias)
        (variable))))

================================================================================
Qualified function call with args
================================================================================

Example.function(1)
Example.function(1,2,3)

--------------------------------------------------------------------------------

(source_file
    (function_call
      (qualified_function_name
        (alias)
        (variable))
        (number))
    (function_call
      (qualified_function_name
        (alias)
        (variable))
        (number)
        (number)
        (number)))

================================================================================
Nested qualified function calls
================================================================================

Example.op(1, Example.function(1,2,3))

--------------------------------------------------------------------------------

(source_file
    (function_call
      (qualified_function_name
        (alias)
        (variable))
        (number)
        (function_call
          (qualified_function_name
            (alias)
            (variable))
            (number)
            (number)
            (number))))



================================================================================
Local function call with args
================================================================================

a = local_function(1)

--------------------------------------------------------------------------------

(source_file
    (match
        (variable)
        (function_call
          (computed_function_name
            (variable))
            (number))))

================================================================================
Nested local function calls
================================================================================

a = local_op(1, local_function(1))

--------------------------------------------------------------------------------

(source_file
  (match
    (variable)
    (function_call
      (computed_function_name
        (variable))
        (number)
        (function_call
          (computed_function_name
            (variable))
            (number)))))

================================================================================
Mixed function calls
================================================================================

A.Module.B.function(lambda(1, local_function(1,2,3)))

--------------------------------------------------------------------------------

(source_file
  (function_call
    (qualified_function_name
      (alias)
      (variable))
      (function_call
        (computed_function_name
          (variable))
          (number)
          (function_call
            (computed_function_name
              (variable))
              (number)
              (number)
              (number)))))
