test/corpus/module.txt
============
Module with atom
============

defmodule :a do
end

---

(source_file (defmodule (atom) (do_block)))

============
Module with Elixir uppercase alias
============

defmodule Example do
end

---

(source_file (defmodule (alias) (do_block)))

============
Module with Elixir namespaced alias
============

defmodule Acme.Example do
end

---

(source_file (defmodule (alias) (do_block)))
