test/corpus/string_interpolation.txt
======================
basic
======================
"#{9999}"
"#{var_name}"

---

(source_file
  (string (interpolation (number)))
  (string (interpolation (variable))))

===
with operator
===

"#{var_name + 9999}"

---

(source_file
  (string (interpolation (expr_op (variable) (number)))))

===
with text
===

"x = #{x}, 2x = #{x * 2}"

---

(source_file
  (string
    (interpolation (variable))
    (interpolation (expr_op (variable) (number)))))

===
in mutil line strings
===

"""
This muilti line string,
includes #{interpolation} with some #{oper * ations}

Neat."""

---

(source_file
  (string
    (interpolation (variable))
    (interpolation (expr_op (variable) (variable)))))

===
interpolating strings in strings
===

"This string #{"contains a string"}"

---

(source_file
  (string
    (interpolation (string))))

===
interpolating strings in strings with operator
===

"This string #{"contains" <> "operation"}"

---

(source_file
  (string
    (interpolation (expr_op (string) (string)))))
