test/corpus/variable.txt
==============
Variable - snake_case
==============

snake_case = 1

---

(source_file
  (match
    (variable)
    (number)))

==============
Variable - camelCase
==============

camelCase = 1

---

(source_file
  (match
    (variable)
    (number)))

==============
Variable - ends in ?
==============

snake_case? = 1

---

(source_file
  (match
    (variable)
    (number)))

==============
Variable - ends in !
==============

snake_case! = 1

---

(source_file
  (match
    (variable)
    (number)))
